[project]
name = "tracert"
version = "0.1.0"
description = "Network Path Analyzer"
authors = [
    {name = "Massimo"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyyaml (>=6.0,<7.0)",
    "aiohttp (>=3.8.0,<4.0.0)",
    "neo4j (>=5.0.0,<6.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "cartopy (>=0.24.1,<0.25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
